further styling the quiz adding transitions to the buttons and fixing some of the layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,6 +63,22 @@ footer {
 
 }
 
+#question-container>p {
+  font-size: large;
+}
+
+.answer-btn {
+  padding: 10px 20px;
+  margin: 5px;
+  font-size: 16px;
+  border-radius: 30px 30px;
+  gap: 2rem;
+  transition: .3s ease;
+}
+.answer-btn:hover {
+  color: #D43C3C;
+}
+
 #social-networks i:hover {
   color: #D43C3C;
 }
